src/objects/Store__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_goods__c</fullName>
        <label>Amount of goods</label>
        <summarizedField>Product__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Made</value>
        </summaryFilterItems>
        <summaryForeignKey>Product__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_of_provided_materials__c</fullName>
        <label>Amount of provided materials</label>
        <summarizedField>Raw_materials__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Raw_materials__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provided</value>
        </summaryFilterItems>
        <summaryForeignKey>Raw_materials__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_of_sold_goods__c</fullName>
        <label>Amount of sold goods</label>
        <summarizedField>Product__c.Number_of_purchase__c</summarizedField>
        <summaryFilterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>Product__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <label>End Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spent_of_provided_materials__c</fullName>
        <label>Spent of provided materials</label>
        <summarizedField>Raw_materials__c.Number__c</summarizedField>
        <summaryFilterItems>
            <field>Raw_materials__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Used</value>
        </summaryFilterItems>
        <summaryForeignKey>Raw_materials__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Period__c</fullName>
        <label>Start Period</label>
        <type>Date</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>